# CameraObjectLocation

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ball_find/: BallFinder.cpp  BallFinder.hpp  BallFinderTest.cpp  BallFinderTest.hpp
src/ball_find/video/: VideoBallFinder.cpp  VideoBallFinder.hpp
src/pixels_to_centimeters/: Converter.cpp  Converter.hpp
